# meridian

./: .env.example  .gitignore  CONVENTIONS.md  README.md  SCENARIO_02_IMPLEMENTATION.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  llm.py  redis.py  security.py
backend/app/models/: __init__.py  daily_plan.py  notification.py  pattern.py  task.py  user.py
backend/app/routers/: __init__.py  auth.py  intelligence.py  notifications.py  plans.py  tasks.py
backend/app/schemas/: __init__.py  auth.py  intelligence.py  notification.py  plan.py  task.py  user.py
backend/app/services/: __init__.py  email.py  suggestions.py  task_parser.py
backend/app/tasks/: __init__.py  notifications.py  patterns.py
backend/tests/: conftest.py  test_auth.py  test_google_oauth.py  test_integration.py  test_intelligence.py  test_notifications.py  test_plans.py  test_scenario_02_satisfaction.py  test_scenario_03_satisfaction.py  test_scenario_04_satisfaction.py  test_tasks.py  test_token_refresh.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
meridian-scenarios/: 01-register-email-password.md  02-google-oauth-login.md  03-token-refresh-expiry.md  04-task-crud.md  05-cross-user-isolation.md  06-task-search-pagination.md  07-daily-plan-creation.md  08-reorder-mid-day.md  09-evening-reflection.md  10-timezone-planning.md  (+10 more)
(+23 files in other folders)
